fix: remove tabs horizontal scrollbar #236

--- a/src/DevTools/DevTools.scss
+++ b/src/DevTools/DevTools.scss
@@ -13,6 +13,7 @@
   padding-top: 40px !important;
   opacity: 0;
   transition: opacity $anim-duration;
+  border-top: 1px solid var(--border);
   .resizer {
     position: absolute;
     width: 100%;
